feat(api): comply endpoints to OpenAPI spec
- use query params for DELETE endpoints instead of json body
